2018-08-07  Peter Stephenson  <p.stephenson@samsung.com>

	* Anton Shestakov: 43254: Completion/Unix/Command/_hg: Remove hg
	-w and add hg -S.

	* Anton Shestakov: 43252: Completion/Unix/Command/_hg: fix up
	various hg options for completion.

	* Anton Shestakov: 43250: Completion/Unix/Command/_hg: Add hg
	forget, phase, summary completions.

	* Anton Shestakov: 43251: Completion/Unix/Command/_hg: fix
	return value of some hg completion functions.

	* Anton Shestakov: 43253: Completion/Unix/Command/_hg: hg
	--style is deprecated, use --template.

2018-08-01  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 43227: Src/Modules/termcap.c, Src/Modules/terminfo.c,
	Src/utils.c: fix memory leaks not fixed in 43219

2018-07-31  dana  <dana@dana.is>

	* 43207 (tweaked): Completion/Unix/Type/_bind_addresses,
	Completion/Unix/Command/_php: Add options to control _bind_addresses
	behaviour, improve PHP completion

2018-07-31  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 43219 (except term{cap,info}.c): Src/Modules/db_gdbm.c,
	Src/Modules/pcre.c, Src/Zle/compcore.c, Src/init.c, Src/math.c,
	Src/subst.c: fix several memory leaks

2018-07-30  Peter Stephenson  <p.stephenson@samsung.com>

	* 43225: Src/Zle/zle_main.c: recalculate timeout after calling
	handler within ZLE raw read.

2018-07-29  Matthew Martin  <phy1729@gmail.com>

	* 43185: Completion/Zsh/Type/_command_names: Use [ suffix for
	associative arrays. Add + to remove-chars from Oliver.

	* 43184: Etc/FAQ.yo: Remove reference to ftp_sites.yo.

2018-07-25  dana  <dana@dana.is>

	* 43203: Completion/Unix/Command/_lua: Add completion for lua

	* Simon Ruderich: 43200: Completion/Linux/Command/_iptables: Add
	completion for ip6tables*

2018-07-20  dana  <dana@dana.is>

	* 43196: Completion/Unix/Command/_nginx: Add completion for nginx

2018-07-20  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 43192: Completion/Unix/Command/_pgrep: simplify the completions
	of comma-separated list of IDs.
